シェーダーのファイル名を変更

--- a/CUDA_GLFW_ParticleSystem/CUDA_GLFW_ParticleSystem.vcxproj
+++ b/CUDA_GLFW_ParticleSystem/CUDA_GLFW_ParticleSystem.vcxproj
@@ -173,8 +173,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="snow.frag" />
-    <None Include="snow.vert" />
+    <None Include="particle.frag" />
+    <None Include="particle.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
